spacing fixes

--- a/style/style.scss
+++ b/style/style.scss
@@ -459,11 +459,13 @@ $taaze-fs-nav: 14px;
       &>.tz-two-product-card-price-enabled {
         color: $taaze-main-color;
         font-weight: $font-weight-bold;
+        margin: 0;
       }
 
       &>.tz-two-product-card-price-disabled {
         text-decoration: line-through;
         color: $taaze-grey3-color;
+        margin: 0;
       }
     }
   }
